syntax = "proto3";
package ProtoBufSerialization;

message Person {
    string Name = 1;
    int32 Age  = 2;
    string Email = 3;
    int32 Id = 4;
    string PhoneNumber = 5;
}
